[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Vehicles/vehicle-2.png" type="Texture" id=1]
[ext_resource path="res://Resources/VFX/Buble/bubble.png" type="Texture" id=2]
[ext_resource path="res://Vehicles/Submarine.gd" type="Script" id=3]
[ext_resource path="res://Resources/VFX/Light.png" type="Texture" id=4]
[ext_resource path="res://Resources/SFX/hatch_open.ogg" type="AudioStream" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.332083 ), 0.0, -0.426959, 0, 0, Vector2( 0.975961, 0.0110023 ), -0.134888, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0.196078 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Submarine" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Bubles" type="Node2D" parent="."]

[node name="IdleBubles" type="CPUParticles2D" parent="Bubles"]
position = Vector2( -51, 8 )
emitting = false
amount = 20
lifetime = 10.0
explosiveness = 0.15
randomness = 0.31
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 8.05
gravity = Vector2( 0, -20 )
scale_amount = 0.2
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="MovingBublesLeft" type="CPUParticles2D" parent="Bubles"]
position = Vector2( -51, 8 )
emitting = false
amount = 150
lifetime = 10.0
randomness = 0.31
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 27.42
gravity = Vector2( -300, -20 )
scale_amount = 0.2
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="MovingBublesRight" type="CPUParticles2D" parent="Bubles"]
position = Vector2( -51, 8 )
emitting = false
amount = 150
lifetime = 10.0
randomness = 0.31
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 27.42
gravity = Vector2( 300, -20 )
scale_amount = 0.2
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -59, -52, -25, -55, 8, -56, 42, -52, 57, -18, 66, -6, 76, 17, 76, 33, 74, 40, 68, 42, 59, 43, 53, 44, 54, 46, 50, 48, 46, 49, 42, 51, 37, 52, 32, 50, 28, 50, 4, 41, 1, 41, -20, 30, -21, 36, -43, 46, -53, 42, -52, 32, -49, 25, -57, 13, -58, 4, -56, 0, -55, -1, -85, -31, -84, -45, -79, -44, -48, -29, -60, -41 )

[node name="LeftParticles" type="Position2D" parent="."]
position = Vector2( -34, 8 )

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 0, -72 )

[node name="RightParticles" type="Position2D" parent="."]
position = Vector2( 84, 9 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ShootingLeft" type="Position2D" parent="."]
position = Vector2( -80, 45 )

[node name="ShootingRight" type="Position2D" parent="."]
position = Vector2( 80, 45 )

[node name="ShootingCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/hurt = SubResource( 3 )

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ExplosionsTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 5.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="ShootingCooldown" to="." method="_on_ShootingCooldown_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_DamageCooldown_timeout"]
[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="timeout" from="ExplosionsTimer" to="." method="_on_ExplosionsTimer_timeout"]
